# django-edtech-platforms

./: CHANGELOG.md  pyproject.toml
apps/courses/: admin.py  models.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_alter_lesson_content.py
apps/courses/templates/courses/: course_detail.html  courses.html  courses_detail.html  lesson_detail.html
apps/pages/: urls.py  views.py
apps/pages/templates/pages/: about.html  home.html
apps/users/: admin.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
ui/static_src/: package-lock.json  package.json  tailwind.config.js
ui/templates/: 404.html  base.html
